added authentificaation using github
